<resources>
    <string name="app_name">GEN-MONITOR</string>
    <string name="title_activity_monitor_device">MonitorDeviceActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Set Your Profile</string>
    <string name="menu_gallery">Need Help</string>
    <string name="menu_slideshow">Sensors Information</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_monitor">MonitorActivity</string>
    <string name="logout">LogOut</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_file">Log File</string>

</resources>
