<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_blue"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_sensors_info"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/message"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_log_file"
            android:icon="@drawable/ic_file"
            android:title="@string/log_file" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
